# ORB_SLAM3_Relocalization

./: .gitignore  CMakeLists.txt  README.md  camera_calibration.yaml  colcon_defaults.yaml  comparison_log.csv  map_points.pcd  package.xml  plot.py  plot2.py  validation_back.jsonl  verify.py
calibration/: calibrate_camera.py  generate_checkerboard.py
config/: camera_params.yaml  relocalization_params.yaml  webcam.yaml  webcam_complete.yaml  webcam_hybrid.yaml
docs/: ate_formula.md  benchmarking.md  navigation_package.tex  session_2026-05-28.md  unified_ransac_lm_pipeline.aux  unified_ransac_lm_pipeline.out  unified_ransac_lm_pipeline.tex  unified_ransac_lm_pipeline.toc  updates_report.tex  weighted_pose_estimation.tex
include/: relocalization.h
launch/: map_creator.launch.py  relocalization.launch.py
maps/: map.osa
plot/: benchmark_params.yaml  plot3.py  plot_benchmark.py  plot_benchmark_2.py  plot_benchmark_3.py
src/: main.cpp  main_mp4_mono.cpp  main_realsense.cpp  main_realsense_simple.cpp  main_relocalization_mp4.cpp  main_relocalization_recovery.cpp  main_webcam.cpp  main_webcam_simple.cpp  map_creator_node.cpp  relocalization.cpp  relocalization_node.cpp  test.cpp  test_map.cpp
src/navigation/: CMakeLists.txt  NAVIGATION_GUIDE.md  package.xml  setup.py
src/navigation/launch/: nav.launch.py  test_navigation.launch.py
src/navigation/navigation/: main.py
src/navigation/navigation/config/: locations.yaml  navigation_params.yaml
src/navigation/navigation/map_constructor/: __init__.py  launch.py  map_publisher.py
src/navigation/navigation/planner/: a_star.py  planner.py  primitives.py  utils.py
src/navigation/navigation/test/: fake_data_publisher.py  position_publisher.py
src/navigation/navigation/ui/: map_ui_node.py  ui_utils.py
src/navigation/test/: test_planner.py
src/navigation/tools/: README.md  osa_to_csv.cpp  pangolin_stub.h
src/orb_slam3_relocalization/: CMakeLists.txt
src/orb_slam3_relocalization/config/: ip12_cam.yaml  localization_test_params.yaml  map_creator_params.yaml  realsense.yaml  relocalization_params.yaml  tum_fr3.yaml  webcam_complete.yaml
src/orb_slam3_relocalization/include/: relocalization.h
src/orb_slam3_relocalization/launch/: localization_test.launch.py  map_creator.launch.py  relocalization.launch.py
src/orb_slam3_relocalization/src/: localization_test_node.cpp  main.cpp  map_creator_node.cpp  relocalization.cpp  relocalization_node.cpp
src/yolo_bbox/: package.xml  setup.cfg  setup.py
src/yolo_bbox/config/: yolo_bbox_params.yaml
src/yolo_bbox/test/: test_yolo_bbox_video.py
src/yolo_bbox/yolo_bbox/: camera_node.py  yolo_bbox_image.py  yolo_bbox_receiver.py  yolo_bbox_video.py  yolo_bbox_webcam.py
tools/map_to_csv/: CMakeLists.txt  CMakeLists_standalone.txt  map_to_csv.cpp
